criacao do estilo e input text no index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="CSS/estilo.css" />
 
     </head>
 
     <body>
         <h2>Tela de Login</h2>
+
+        <input type="text" placeholder="usuário" class="campo" />
     </body>
 </html>
